Product title adjust

--- a/webroot/css/qr.css
+++ b/webroot/css/qr.css
@@ -7,6 +7,6 @@ footer img.logo-bottom {
 }
 
 /* Product listing page */
-.product .product-title {
+.products .product .product-title {
     font-size: 130%;
 }
