--- a/webroot/css/qr.css
+++ b/webroot/css/qr.css
@@ -43,8 +43,8 @@ footer img.logo-bottom {
     background: linear-gradient(#9bc90d 0%, #79a70a 100%);
     box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
     position: absolute;
-    top: 17px; // change this, if no border
-    right: -29px; // change this, if no border
+    top: 17px; /** change this, if no border **/
+    right: -29px; /** change this, if no border **/
 }
 
 .ribbon span::before {
