--- a/webroot/css/qr.css
+++ b/webroot/css/qr.css
@@ -1,9 +1,41 @@
+/** Keep the logo in check **/
 .navbar.qr-navbar-top img.logo-top {
     max-width: 200px;
 }
 footer img.logo-bottom {
     max-width: 150px;
 
+}
+
+/** Avatars **/
+.avatar-sm {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.avatar-50 {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.avatar-md {
+    vertical-align: middle;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.avatar-150 {
+    vertical-align: middle;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+.avatar-lg {
+    vertical-align: middle;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
 }
 
 /**
