--- a/webroot/css/qr.css
+++ b/webroot/css/qr.css
@@ -13,30 +13,26 @@ footer img.logo-bottom {
     height: 40px;
     border-radius: 50%;
 }
-.avatar-50 {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
+    .avatar-sm i.bi {
+        font-size: 1rem;
+    }
 .avatar-md {
-    vertical-align: middle;
     width: 100px;
     height: 100px;
     border-radius: 50%;
 }
-.avatar-150 {
-    vertical-align: middle;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
+    .avatar-md i.bi {
+        font-size: 3.5rem;
+    }
 .avatar-lg {
     vertical-align: middle;
     width: 200px;
     height: 200px;
     border-radius: 50%;
 }
+    .avatar-lg i.bi {
+        font-size: 7rem;
+    }
 
 /**
  * Product listing page
@@ -57,6 +53,12 @@ footer img.logo-bottom {
  */
 .product-view .product {
     position: relative;
+}
+
+/** Hover for main page **/
+.card .background-overlay:hover::after {
+    background: transparent !important;
+    transition: background-color 1s ease-out;
 }
 
 /**
